fix gap between beer-items

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ h2 {
     align-items: center;
     color: #414141;
     font-size: 2vh;
-    max-width: 50vh;
+    max-width: 35vh;
 }
 
 img.info-img {
